unpackaged/main/default/objects/Surcharge_Journal_Entry__c/Surcharge_Journal_Entry__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General Ledger Ids, etc</description>
    <label>Surcharge Journal Entry</label>
</CustomObject>