unpackaged/main/default/objects/Surcharge_Journal_Entry__c/fields/Dim1_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Dim1_Surcharge__c</fullName>
    <description>1100-G&amp;A</description>
    <inlineHelpText>1100-G&amp;A</inlineHelpText>
    <label>Dim1 Surcharge</label>
    <length>18</length>
    <type>Text</type>
</CustomField>