unpackaged/main/default/objects/Surcharge_Journal_Entry__c/fields/GLA_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>GLA_Bank_Account__c</fullName>
    <label>GLA Bank Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>