unpackaged/main/default/objects/Surcharge_Journal_Entry__c/fields/GLA_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>GLA_Surcharge__c</fullName>
    <label>GLA Surcharge</label>
    <length>18</length>
    <type>Text</type>
</CustomField>